# easy

./: .gitignore  AI_BOX_FLYER.md  AI_TOOLS.md  CMakeLists.txt  EXTERNAL_TOOLS.md  INI.md  INI_KFlags.md  LINUX_SERVER.md  MCP.md  RAG.md  README.md  REG.md  SECURITY_AUDIT.md  SESSION_NOTES.md  build_cpu.sh  build_cuda.sh  build_macos.sh  build_vulkan.sh  design.md  easyai-cli.md  easyai-mcp-server.md  easyai-server.md  manual.md
cmake/: easyaiConfig.cmake.in  patch_httplib.cmake
examples/: agent.cpp  chat.cpp  cli.cpp  cli_remote.cpp  local.cpp  mcp_server.cpp  recipes.cpp  server.cpp  tools.example.json
include/easyai/: agent.hpp  backend.hpp  builtin_tools.hpp  cli.hpp  client.hpp  config.hpp  easyai.hpp  engine.hpp  external_tools.hpp  log.hpp  mcp.hpp  mcp_client.hpp  plan.hpp  preamble.hpp  presets.hpp  rag_tools.hpp  reg_tools.hpp  text.hpp  tool.hpp  ui.hpp
resources/: easyai-cli.ini.example  easyai.ini.example
scripts/: install_easyai_macos.sh  install_easyai_pi.sh  install_easyai_server.sh  mcp-stdio-bridge.py
src/: agent.cpp  backend.cpp  builtin_tools.cpp  cli.cpp  cli_client.cpp  client.cpp  config.cpp  engine.cpp  external_tools.cpp  log.cpp  mcp.cpp  mcp_client.cpp  plan.cpp  preamble.cpp  presets.cpp  rag_tools.cpp  reg_tools.cpp  tool.cpp  ui.cpp
templates/: qwen3-think.jinja
webui/: index.html
